fix: Ensure all formatting uses Locale.US for consistency
- Fixed BadgeGenerator formatTrendMessage to use Locale.US
- Fixed JsonSerializationHelper formatDouble to use Locale.US
- Fixed ReportDataGenerator formatScore to use Locale.US
- Added missing Locale imports to all affected classes

This ensures consistent decimal separator behavior regardless of system locale,
preventing test failures and display inconsistencies across different environments.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>